@startuml Bank Class Diagram

class Bank {
    This represents the bank.
    ---
    + ""partner-code"": ""String""
    + ""users"": ""Array<User>""
    + ""loyaltyProgramMemberships"": ""Array<LoyaltyProgramMembership>""
    + ""loyaltyPrograms"": ""Array<LoyaltyProgram>""
    + ""transfers"": ""Array<Transfer>""
}

class User {
    This represents a user of the bank.
    ---
    + ""userId"": ""String""
    + ""username"": ""String""
    + ""firstName"": ""String""
    + ""lastName"": ""String""
    + {field} ""password"": ""String"" (hashed)
    + ""points"": ""Number""
    + {field} ""userSettings"": User's notification settings\n""{"" \n\t""email: String,"" \n\t""phoneNumber: String,"" \n\t""pushNotif: Boolean""\n ""}""
}

class LoyaltyProgram {
    This represents a single loyalty program.
    ---
    + ""loyaltyProgramId"": ""String""
    + ""loyaltyProgramName"": ""String""
    + {field} ""exchange-rate"": ""Number"" (ratio of TC points/Program points)
    + ""currencyName"": ""String""
    + ""minTransfer"": ""Number""
    + ""processingTime"": ""String""
    + ""description"": ""String""
    + ""enrolmentLink"": ""String"" of URL to program enrolment
    + ""tncLink"": ""String"" of URL to program's terms and conditions
    + {field} ""imgSrc"": ""String"" of URL to program's logo
}

class LoyaltyProgramMembership {
    This represents a membership registered under\n a specific Bank User for a specific Loyalty Program.
    ---
    + ""userId"": ""String""\nID of Bank User this membership is registered to.
    + ""loyaltyProgramMemberId"": ""String""\nID of loyalty program membership.
    + ""loyaltyProgramId"": ""String""\nID of loyalty program.
}

class Transfer {
    This represents a single accrual transfer made by a specific bank user\nunder a specific program membership.
    ---
    + ""transferId"": ""String""
    + ""loyaltyProgramMembershipId"": ""String""
    + {field} ""status"": ""String""
    + ""statusMessage"": ""String""
    + ""submissionDate"": ""Date""
    + ""points"": ""Number""
    + ""userId"": ""String""
    + {field} ""sentToTC"": ""Boolean"" representing whether or not\nthis transfer was successfully sent to TransferConnect.
}

Bank "1" *-- "0..*" User : ""users"" contains >
Bank "1" *---- "0..*" LoyaltyProgramMembership : ""loyaltyProgramMemberships"" contains >
Bank "1" *-- "0..*" Transfer : ""transfers"" contains >
Bank "1" *-- "0..*" LoyaltyProgram : ""loyaltyPrograms"" contains >

User "1"*---"0..*" LoyaltyProgramMembership : < ""userId"" associated with...
User "1"*---"0..*" Transfer : ""transferIds"" contains ""transferId"" of...\n >

LoyaltyProgram --- LoyaltyProgramMembership : has ""loyaltyProgramId"" <

@enduml